Output data in more appropriate format

--- a/lunar-crater-rates.ipynb
+++ b/lunar-crater-rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f47437bb-727e-41db-a494-c32c9f4e18cc",
    "metadata": {
     "collapsed": false
@@ -90,7 +90,10 @@
    "source": [
     "We will now look at every crater smaller than 10km in Robbins 2018, and see if it lies within Yang 2020.\n",
     "\n",
-    "To check if a child crater lies within a parent crater, we first calculate the distance between the centerpoints of each crater. Then, we check if that distance is smaller the radius of the parent crater."
+    "To check if a child crater lies within a parent crater, we first calculate the distance between the centerpoints of each crater. Then, we check if that distance is smaller the radius of the parent crater. We used this method to create a new database.\n",
+    "\n",
+    "- `yang_id`: ID of crater in the Yang 2020 database\n",
+    "- `robbins_ids`: Set of IDs of craters in Robbins 2018 database that lie within a crater in the Yang database."
    ]
   },
   {
@@ -100,285 +103,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://nssdc.gsfc.nasa.gov/planetary/factsheet/moonfact.html\n",
-    "MOON_MEAN_RADIUS = 1737.4 # km\n",
-    "\n",
-    "\n",
-    "def great_cirlce_distance(a_lon, a_lat, b_lon, b_lat, radius=MOON_MEAN_RADIUS):\n",
-    "    \"\"\"\n",
-    "    Calculate the great circle distance between two points.\n",
-    "\n",
-    "    Assumes lon/lat is passed in degrees.\n",
-    "    \"\"\"\n",
-    "    a_lon = np.deg2rad(a_lon)\n",
-    "    a_lat = np.deg2rad(a_lat)\n",
-    "    b_lon = np.deg2rad(b_lon)\n",
-    "    b_lat = np.deg2rad(b_lat)\n",
-    "\n",
-    "    angle = np.arccos(np.sin(a_lat) * np.sin(b_lat)\n",
-    "                      + np.cos(a_lat) * np.cos(b_lat) * np.cos(a_lon-b_lon))\n",
-    "    return angle * radius\n",
-    "\n",
-    "\n",
-    "def crater_in_crater(c_lon, c_lat, p_lon, p_lat, p_diam):\n",
-    "    \"\"\"\n",
-    "    Check if child crater c lies within parent crater p.\n",
-    "    \"\"\"\n",
-    "    dist = great_cirlce_distance(c_lon, c_lat, p_lon, p_lat)\n",
-    "    return dist < p_diam\n",
-    "\n",
-    "\n",
-    "def child_in_parents()\n",
-    "\n",
-    "\n",
-    "def craters_in_craters(child_df, parent_df):\n",
-    "    \"\"\"\n",
-    "    Check if craters in child_df are in parent_df.\n",
-    "\n",
-    "    Both input dataframes have the columns: [\"id\", \"lon\", \"lat\", \"diam\"]\n",
-    "\n",
-    "    Has the side effect of adding a new column to parent_df called \"children_ids\",\n",
-    "    the set of IDs of child craters.\n",
-    "    \"\"\"\n",
-    "    pass"
+    "craters_in_craters = pd.read_csv(\"./robbins_in_yang.csv\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6834b4b0",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "090e1167-3917-40ae-b51b-bf9ecbc63c3f",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_8911/2318420125.py:16: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle = np.arccos(np.sin(a_lat) * np.sin(b_lat)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m yang_lat  \u001b[39m=\u001b[39m yang_crater[\u001b[39m\"\u001b[39m\u001b[39mLat\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m yang_diam \u001b[39m=\u001b[39m yang_crater[\u001b[39m\"\u001b[39m\u001b[39mDiam_km\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mif\u001b[39;00m crater_in_crater(robbins_lon, robbins_lat, yang_lon, yang_lat, yang_diam):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     robbins_id \u001b[39m=\u001b[39m robbins_craters[\u001b[39m\"\u001b[39m\u001b[39mCRATER_ID\u001b[39m\u001b[39m\"\u001b[39m][robbins_ind]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     yang_aged_craters[\u001b[39m\"\u001b[39m\u001b[39mChild_Robbins_Crater_IDs\u001b[39m\u001b[39m\"\u001b[39m][yang_ind]\u001b[39m.\u001b[39madd(robbins_id)\n",
-      "\u001b[1;32m/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcrater_in_crater\u001b[39m(c_lon, c_lat, p_lon, p_lat, p_diam):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m    Check if child crater c lies within parent crater p.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     dist \u001b[39m=\u001b[39m great_cirlce_distance(c_lon, c_lat, p_lon, p_lat)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m dist \u001b[39m<\u001b[39m p_diam\n",
-      "\u001b[1;32m/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m b_lon \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdeg2rad(b_lon)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m b_lat \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdeg2rad(b_lat)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m angle \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marccos(np\u001b[39m.\u001b[39msin(a_lat) \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msin(b_lat)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m                   \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mcos(a_lat) \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mcos(b_lat) \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mcos(a_lon\u001b[39m-\u001b[39mb_lon))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/devlin/Documents/lunar-crater-rates/lunar-crater-rates.ipynb#X10sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mreturn\u001b[39;00m angle \u001b[39m*\u001b[39m radius\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "yang_aged_craters[\"Child_Robbins_Crater_IDs\"] = [set() for _ in range(len(yang_aged_craters))]\n",
+    "example_parent_crater = craters_in_craters[\"yang_id\"][0]\n",
+    "example_child_craters = craters_in_craters[\"robbins_ids\"][0]\n",
     "\n",
-    "for robbins_ind, robbins_crater in robbins_craters.iterrows():\n",
-    "    robbins_lon  = robbins_crater[\"LON_CIRC_IMG\"]\n",
-    "    robbins_lat  = robbins_crater[\"LAT_CIRC_IMG\"]\n",
-    "    \n",
-    "    for yang_ind, yang_crater in yang_aged_craters.iterrows():\n",
-    "        yang_lon  = yang_crater[\"Lon\"]\n",
-    "        yang_lat  = yang_crater[\"Lat\"]\n",
-    "        yang_diam = yang_crater[\"Diam_km\"]\n",
-    "        if crater_in_crater(robbins_lon, robbins_lat, yang_lon, yang_lat, yang_diam):\n",
-    "            robbins_id = robbins_craters[\"CRATER_ID\"][robbins_ind]\n",
-    "            yang_aged_craters[\"Child_Robbins_Crater_IDs\"][yang_ind].add(robbins_id)\n",
-    "            break"
+    "print(f\"ID of parent crater in Yang 2020: {example_parent_crater}\")\n",
+    "print(f\"IDs of child craters in Robbins 2018 within the parent: {example_child_craters}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "3e070e9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Flags_data</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Diam_km</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Child_Robbins_Crater_IDs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CE1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-8.503370</td>\n",
-       "      <td>293.189000</td>\n",
-       "      <td>19.987530</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CE1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-7.408700</td>\n",
-       "      <td>8.209640</td>\n",
-       "      <td>19.986876</td>\n",
-       "      <td>5</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CE1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>64.340500</td>\n",
-       "      <td>67.728600</td>\n",
-       "      <td>19.985744</td>\n",
-       "      <td>5</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CE1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>-32.517300</td>\n",
-       "      <td>34.820200</td>\n",
-       "      <td>19.985460</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CE1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>21.586500</td>\n",
-       "      <td>80.999700</td>\n",
-       "      <td>19.984877</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18991</th>\n",
-       "      <td>CE2</td>\n",
-       "      <td>116980</td>\n",
-       "      <td>-63.872833</td>\n",
-       "      <td>119.773304</td>\n",
-       "      <td>10.584219</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18992</th>\n",
-       "      <td>CE2</td>\n",
-       "      <td>117003</td>\n",
-       "      <td>-64.415138</td>\n",
-       "      <td>180.715665</td>\n",
-       "      <td>11.905659</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18993</th>\n",
-       "      <td>CE2</td>\n",
-       "      <td>117017</td>\n",
-       "      <td>-64.372227</td>\n",
-       "      <td>203.861354</td>\n",
-       "      <td>14.643919</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18994</th>\n",
-       "      <td>CE2</td>\n",
-       "      <td>117238</td>\n",
-       "      <td>-64.545580</td>\n",
-       "      <td>174.082361</td>\n",
-       "      <td>8.129036</td>\n",
-       "      <td>5</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18995</th>\n",
-       "      <td>CE2</td>\n",
-       "      <td>117240</td>\n",
-       "      <td>-64.484248</td>\n",
-       "      <td>178.381197</td>\n",
-       "      <td>9.808453</td>\n",
-       "      <td>4</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>18996 rows × 7 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Flags_data      ID        Lat         Lon    Diam_km  Age  \\\n",
-       "0            CE1       1  -8.503370  293.189000  19.987530    2   \n",
-       "1            CE1       2  -7.408700    8.209640  19.986876    5   \n",
-       "2            CE1       3  64.340500   67.728600  19.985744    5   \n",
-       "3            CE1       4 -32.517300   34.820200  19.985460    2   \n",
-       "4            CE1       5  21.586500   80.999700  19.984877    2   \n",
-       "...          ...     ...        ...         ...        ...  ...   \n",
-       "18991        CE2  116980 -63.872833  119.773304  10.584219    1   \n",
-       "18992        CE2  117003 -64.415138  180.715665  11.905659    2   \n",
-       "18993        CE2  117017 -64.372227  203.861354  14.643919    2   \n",
-       "18994        CE2  117238 -64.545580  174.082361   8.129036    5   \n",
-       "18995        CE2  117240 -64.484248  178.381197   9.808453    4   \n",
-       "\n",
-       "      Child_Robbins_Crater_IDs  \n",
-       "0                           {}  \n",
-       "1                           {}  \n",
-       "2                           {}  \n",
-       "3                           {}  \n",
-       "4                           {}  \n",
-       "...                        ...  \n",
-       "18991                       {}  \n",
-       "18992                       {}  \n",
-       "18993                       {}  \n",
-       "18994                       {}  \n",
-       "18995                       {}  \n",
-       "\n",
-       "[18996 rows x 7 columns]"
+       "\"{'01-1-002004', '01-1-002609', '01-1-002759', '01-1-001987', '01-1-002610', '01-1-001985', '01-1-002611', '01-1-001989', '01-1-002604', '01-1-002040', '01-1-002708', '01-1-002765', '01-1-002760', '01-1-002608', '01-1-002624', '01-1-002621', '01-1-002692', '01-1-001953', '01-1-003912', '01-1-002001', '01-1-002002', '01-1-002600', '01-1-002023', '01-1-002003', '01-1-001993', '01-1-002701', '01-1-002021', '01-1-002012', '01-1-002054', '01-1-000006', '01-1-002056', '01-1-002598', '01-1-002713', '01-1-002705', '01-1-002684', '01-1-002703', '01-1-002602', '01-1-002710', '01-1-002704', '01-1-002009', '01-1-002011', '01-1-002683', '01-1-002024', '01-1-002686', '01-1-001955', '01-1-002599', '01-1-002693', '01-1-003913', '01-1-002696', '01-1-002690', '01-1-003914', '01-1-002712', '01-1-002025', '01-1-002620', '01-1-002709', '01-1-002688', '01-1-002006', '01-1-002605', '01-1-002613', '01-1-001995', '01-1-002768', '01-2-027898', '01-1-002702', '01-1-002053', '01-1-002612', '01-1-002008', '01-1-001991', '01-1-001984', '01-1-001994', '01-1-002699', '01-1-002731', '01-1-003916', '01-1-002005', '01-1-002691', '01-1-001990', '01-1-002698', '01-1-002730', '01-1-002694', '01-1-002601', '01-1-002603', '01-1-002687', '01-1-002764', '01-1-002723', '01-1-002697', '01-1-002623', '01-1-001986', '01-1-002022'}\""
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yang_aged_craters"
+    "example_child_craters"
    ]
   }
  ],
