--- a/lunar-crater-rates.ipynb
+++ b/lunar-crater-rates.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "0cbff583",
    "metadata": {},
    "outputs": [],
@@ -47,14 +47,14 @@
    "source": [
     "We will now describe the methods used to find craters within other craters. There is a link to download this code in the Appendix.\n",
     "\n",
-    "The Yang et al. (2020) database contains the ages for all craters larger than 10km in diameter. The Robbins (2018) database contains many craters larger than 1km in diamter. We started by creating a subset of the Robbins database only containing craters smaller than 10km in diamter."
+    "The Yang et al. (2020) database contains the ages for all craters larger than 10km in diameter. The Robbins (2018) database contains many craters larger than 1km in diameter. We started by creating a subset of the Robbins database only containing craters smaller than 10km in diameter."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We looked at every crater smaller than 10km in Robbins 2018, and see if it lies within a crater in Yang 2020. We use the following method to see if a child crater from Robbins lies within a parent crater from Yang. First, we calculate the distance between the centerpoints of each crater. Then, we check if that distance is smaller the radius of the parent crater. This gives the following inequality:\n",
+    "We looked at every crater smaller than 10km in Robbins 2018, and see if it lies within a crater in Yang 2020. We use the following method to see if a child crater from Robbins lies within a parent crater from Yang. First, we calculate the distance between the center-points of each crater. Then, we check if that distance is smaller the radius of the parent crater. This gives the following inequality:\n",
     "\n",
     "$$p_\\text{radius} < \\text{GCD}(c_\\text{lon}, c_\\text{lat}, p_\\text{lon}, p_\\text{lat})$$\n",
     "\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "ff939cf6",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will reinstantiate the Yang et al. (2020) database as we will be adding the number of embedded craters and our calculated rates for each of the dated craters.\n",
+    "We loaded the Yang et al. (2020) database in the above block. We will be adding the number of embedded craters and our calculated rates for each of the dated craters.\n",
     "\n",
     "Before getting to deep into the analysis, let us take a look at the data to see the distribution of age estimates to preview the strength of this study.\n",
     "\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61579c4cf8304702a87a54319ea6b7d7",
+       "model_id": "1b59d4aca4a146be9bc1b3a43af757ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,14 +163,14 @@
    "source": [
     "From this histogram, we can see that there are significantly more craters of age \"2\" and of age \"5\". We need to keep this skew in mind, as our average rates may be biased toward the more immediate rates that occurred during these time periods.\n",
     "\n",
-    "Recall, age \"2\" symbolizes the Nectarian age, part of which was involved in the Late Heavy Bombardmen (LHB) period - therefore we may expect a higher overal rate as a result of this bias (Yang et al. (2020)). Furthermore, age \"5\" symbolizes the Copernican age, which runs from 1.1 Ga until today. Research suggests that the Copernican age has experienced a notable spike in cratering formation rate, such that the rate of crater formation has increased by a factor of 2.6 times within the last 290 Ma (0.29 Ga) (Mazrouei et al. (2019); Kirchoff et al. (2019); Ipatov et al.(2020); Morota et al. (2005)). Thus, it is also likely that we will see a rise in crater formation rates in comparison to the previous ages after the LHB. \n",
+    "Recall, age \"2\" symbolizes the Nectarian age, part of which was involved in the Late Heavy Bombardment (LHB) period - therefore we may expect a higher overall rate as a result of this bias (Yang et al. (2020)). Furthermore, age \"5\" symbolizes the Copernican age, which runs from 1.1 Ga until today. Research suggests that the Copernican age has experienced a notable spike in cratering formation rate, such that the rate of crater formation has increased by a factor of 2.6 times within the last 290 Ma (0.29 Ga) (Mazrouei et al. (2019); Kirchoff et al. (2019); Ipatov et al.(2020); Morota et al. (2005)). Thus, it is also likely that we will see a rise in crater formation rates in comparison to the previous ages after the LHB. \n",
     "\n",
     "In order to begin this analysis, we must count the number of craters that are embedded in the dated craters. We will do this by cycling through both the dated craters in the Yang et al. (2020) dataset, as well as the `robbins_in_yang` data that was calculated to obtain the embedded craters. Notably, not all of the dated craters actually have embedded craters, therefore, if there was no crater detected within the dated crater, we input the 0 onto the data. This allows us to insert a column into the dataframe in order to conduct the appropriate calculations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
    "source": [
     "Now that we have the number of embedded craters matched to their respective craters, we can begin calculating the individual average rates by dividing the number of embedded craters by the estimated elapsed time since the formation of the crater.\n",
     "\n",
-    "Recall that the Yang et al. database divides the data into only five eras. The granularity of this data complicates the interpretation of the rate estimates we calculate. We are chosing to use the upper bound of the respective age to avoid the assumption that the craters in the Copernican age all happened last night (per se). We considered using the midpoint of the date range to counter the assumption that the craters from the pre-Nectarian age occurred all at the very creation of the moon (roughly 4.57 Ga by Snape et al. (2016)); however, we don't find any true advantage to using the midpoint versus the older age. This model should be taken no more than as an estimate of rate trends across both different ages, as well as different regions of the moon using currently accessible data."
+    "Recall that the Yang et al. database divides the data into only five eras. The granularity of this data complicates the interpretation of the rate estimates we calculate. We are choosing to use the upper bound of the respective age to avoid the assumption that the craters in the Copernican age all happened last night (per se). We considered using the midpoint of the date range to counter the assumption that the craters from the pre-Nectarian age occurred all at the very creation of the moon (roughly 4.57 Ga by Snape et al. (2016)); however, we don't find any true advantage to using the midpoint versus the older age. This model should be taken no more than as an estimate of rate trends across both different ages, as well as different regions of the moon using currently accessible data."
    ]
   },
   {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,14 +241,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have identified the rates attributed to each crater. We can parse the data into their resepective age categories to observe local trends in crater forming activity since the formation of the craters. We can do this by plotting the frequency of crater formation rates within an age group.\n",
+    "Now that we have identified the rates attributed to each crater. We can parse the data into their respective age categories to observe local trends in crater forming activity since the formation of the craters. We can do this by plotting the frequency of crater formation rates within an age group.\n",
     "\n",
     "If the crater formation rate was constant, we would naturally expect the rate distributions to be very similar. We will need to parse the data into their respective age categories to make this analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d809e57191740cfb7211431b4b0193a",
+       "model_id": "ae81e942ef9b4794abf708bae83aa7fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -452,12 +452,12 @@
     "\n",
     "$M_{ratio} = A_M / μ_{sa}$\n",
     "\n",
-    "where $M_{ratio}$ is the amount by which we would need to scale the calculated rate to conver the whole moon if we assumed that the cratering rate is constant across the entire surface of the moon."
+    "where $M_{ratio}$ is the amount by which we would need to scale the calculated rate to cover the whole moon if we assumed that the cratering rate is constant across the entire surface of the moon."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating full Moon cratering rate approximations will require the `moon_to_calculated_ratio` term. We will reveal these cratering aproximations in the \"Results\" section."
+    "Calculating full Moon cratering rate approximations will require the `moon_to_calculated_ratio` term. We will reveal these cratering approximations in the \"Results\" section."
    ]
   },
   {
@@ -500,12 +500,12 @@
     "\n",
     "We are also interested in seeing how different parts of the moon get impacted at different rates.\n",
     "\n",
-    "To start, we will want to divide the moon into 10° x 10° chunks. For example, we will want to find the cratering rates within latitudes 20 - 30 degrees and longitude 10 -20 degrees to get a sense for its local cratering activity. We will want to then store the mean rateof each square. This would result in Latitude x Longitude x Data matrix of size 18 x 36 x 1. Lets try to create this monstrocity."
+    "To start, we will want to divide the moon into 10° x 10° chunks. For example, we will want to find the cratering rates within latitudes 20 - 30 degrees and longitude 10 -20 degrees to get a sense for its local cratering activity. We will want to then store the mean rate of each square. This would result in Latitude x Longitude x Data matrix of size 18 x 36 x 1. Lets try to create this monstrosity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -611,14 +611,14 @@
        "Text(0.5, 0.98, 'Cratering Rates Across Eras')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "814dfbff46c849649c597ba3a40229d2",
+       "model_id": "00cb943c5abf461a8153ab1b1d47b92d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -706,13 +706,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "348a13433be846359bacd66cfbfc6e58",
+       "model_id": "d1e4c50f2f4f43518489106d5e834f30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -787,21 +787,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We find that crater formation of diameter > 1km has increased by a fator of 3.42\n",
+      "We find that crater formation of diameter > 1km has increased by a factor of 3.42\n",
       "within the last 1.1 Ga (billion years) for some surface area of 325.42 km^2.\n"
      ]
     }
    ],
    "source": [
     "flux_increase = copernican_old_rates_mean / eratosthenian_old_rates_mean\n",
-    "print(\"We find that crater formation of diameter > 1km has increased by a fator of %.2f\" % flux_increase)\n",
+    "print(\"We find that crater formation of diameter > 1km has increased by a factor of %.2f\" % flux_increase)\n",
     "print(\"within the last 1.1 Ga (billion years) for some surface area of %.2f\" % mean_sa ,\"km^2.\")"
    ]
   },
@@ -817,12 +817,12 @@
    "metadata": {},
    "source": [
     "### Cratering Rate Approximation\n",
-    "Recall that the cratering rates so far have dealt with a localized area. On average, we determined that our rates were accounting for only 325.42 km^2 of the surface. Therefore, by mutiplying our rates by the ratio of the total surface area over the surface area previously accounted for, we get the following result for the Moon using the Copernican Age Rate."
+    "Recall that the cratering rates so far have dealt with a localized area. On average, we determined that our rates were accounting for only 325.42 km^2 of the surface. Therefore, by multiplying our rates by the ratio of the total surface area over the surface area previously accounted for, we get the following result for the Moon using the Copernican Age Rate."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "43694466",
    "metadata": {},
    "outputs": [],
@@ -939,13 +939,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f71bdaab9e9d42368465e0d0d1dd6d64",
+       "model_id": "45b44231d92e4fe2b7a7b2a95a663e41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -995,21 +995,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evident from the heat map above, the cratering rate of the moon is not consistent across the entire surface. Notably it would seem as through there is a congregation of embeddedd craters within longitudes -180° to -90° and within latitudes -30° to 70°. Looking this area up on the LROC shows that this is the rough location of the Highlands. Furthermore, the lighter shaded  sections when looked up on LROC show primarily spots of lunar mare. This observation in general shows that it is difficult to estimate a proper cratering rate for the moon. Unfortunately, due to the limited data base, we do not have information for the latitudes 70° to 90° and -70° to -90°, which is why they are represented as white (empty) space. \n",
+    "Evident from the heat map above, the cratering rate of the moon is not consistent across the entire surface. Notably it would seem as through there is a congregation of embedded craters within longitudes -180° to -90° and within latitudes -30° to 70°. Looking this area up on the LROC shows that this is the rough location of the Highlands. Furthermore, the lighter shaded  sections when looked up on LROC show primarily spots of lunar mare. This observation in general shows that it is difficult to estimate a proper cratering rate for the moon. Unfortunately, due to the limited data base, we do not have information for the latitudes 70° to 90° and -70° to -90°, which is why they are represented as white (empty) space. \n",
     " \n",
     "This heat map is not the best projection of these rates, since it conveys that the surface areas accounted for each chunk is the same, which is simply not the case. Therefore, we will project this information onto a 3D spherical projection to better represent the information."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "e068a4b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63fef4b72fc14a36998e7cf428c56a2b",
+       "model_id": "18b827afae514f37ae719054ae006876",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1057,7 +1057,7 @@
    "source": [
     "This projection allows us to get a better sense for what the cratering rate represents in relation to the relative surface area it accounts for. One would naturally assume a higher accuracy in rate around the equator as the 10° x 10° chunks cover a larger sample size (surface area) and thus encompass a larger amount of data. \n",
     "\n",
-    "We would like to point to the 60°N-70°N belt. We observe a higher cratering rate similar to that of what we identified as the highlands. While we do not propose an explanation as to why this is the case, we simply draw attention to this detail that may give way to firther research as to why this contrast exists."
+    "We would like to point to the 60°N-70°N belt. We observe a higher cratering rate similar to that of what we identified as the highlands. While we do not propose an explanation as to why this is the case, we simply draw attention to this detail that may give way to further research as to why this contrast exists."
    ]
   },
   {
